--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Chen's homepage"
 description              : ""
-repository               : "HEDGES0-0\chenwei.github.io 
+repository               : "HEDGES0-0/chenwei.github.io 
 google_scholar_stats_use_cdn : true
 
 # google analytics
