--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Chen's homepage"
+title                    : "Hi, this is Chen!"
 description              : ""
-repository               : "HEDGES0-0/chenwei.github.io"
+repository               : "HEDGES0-0/hedges0-0.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
